ExamPackage/main/default/objects/Exam__c/Exam__c.object-meta.xml
<CustomObject>
    <!--actionOverrides>
        <actionName>View</actionName>
        <comment>Action override created by Lightning App Builder during activation.</comment>
        <content>Exam_Record_Page1</content>
        <formFactor>Small</formFactor>
        <skipRecordTypeSelect>false</skipRecordTypeSelect>
        <type>Flexipage</type>
    </actionOverrides-->
    <label>Exam</label>
    <nameField>
        <label>Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>