ExamPackage/main/default/objects/Exam__c/fields/Default_Passing_Grade__c.field-meta.xml
<CustomField>
    <fullName>Default_Passing_Grade__c</fullName>
    <label>Default Passing Grade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>