ExamPackage/main/default/objects/Exam__c/fields/Default_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Default_Time_Limit__c</fullName>
    <label>Default Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>