ExamPackage/main/default/objects/Exam__c/fields/First_Exam__c.field-meta.xml
<CustomField>
    <fullName>First_Exam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Exam?</label>
    <type>Checkbox</type>
</CustomField>