ExamPackage/main/default/objects/Exam__c/fields/Next_Exam__c.field-meta.xml
<CustomField>
    <fullName>Next_Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Exam</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The next exam must be within the same Titan!</errorMessage>
        <filterItems>
            <field>Exam__c.Titan__c</field>
            <operation>equals</operation>
            <valueField>$Source.Titan__c</valueField>
        </filterItems>
        <filterItems>
            <field>Exam__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Previous Exam</relationshipLabel>
    <relationshipName>Next_Exam</relationshipName>
    <type>Lookup</type>
</CustomField>