ExamPackage/main/default/objects/Exam__c/fields/Titan__c.field-meta.xml
<CustomField>
    <fullName>Titan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titan</label>
    <referenceTo>Titan__c</referenceTo>
    <relationshipLabel>Exams</relationshipLabel>
    <relationshipName>Exams</relationshipName>
    <type>Lookup</type>
</CustomField>