ExamPackage/main/default/objects/Exam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Titan__c</columns>
    <columns>Next_Exam__c</columns>
    <columns>Default_Passing_Grade__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>